<resources>
    <string name="app_name">ListedenAlApp</string>
    <string name="welcome">Hoş Geldin</string>
    <string name="register_button_text">Yeni <b>Hesap Oluştur</b></string>
    <string name="or">veya</string>
    <string name="register_google_button_text">Google ile <b>Kayıt Ol</b></string>
    <string name="login_google_button_text">Google ile <b>Giriş Yap</b></string>
    <string name="privacy_policy_text">Kaydolduğunuzda, Çerez Kullanımı da dahil olmak üzere Hizmet Şartları ve Gizlilik Politikası\'nı kabul etmiş olursunuz.</string>
    <string name="already_have_account">Zaten bir hesabın var mı?</string>
    <string name="login_button_text">Hesabına <b>Giriş Yap</b></string>
    <string name="app_image">App Image</string>
    <string name="register">Kayıt Ol</string>
    <string name="create_account">Hesap Oluştur</string>
    <string name="login">Giriş Yap</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_auth">AuthActivity</string>
    
    <string name="hello">Merhaba</string>"


    <string name="error_invalid_credentials">Yanlış e-posta veya şifre.</string>
    <string name="error_user_not_found">Kullanıcı bulunamadı.</string>
    <string name="error_authentication_failed">Kimlik doğrulama hatası.</string>
    <string name="error_server_error">Sunucu hatası. Lütfen daha sonra tekrar deneyin.</string>
    <string name="error_unknown">Bilinmeyen hata.</string>

</resources>