<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeFragment">

    <include layout="@layout/auth_layout_background" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintWidth_max="600dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/welcome_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <include layout="@layout/auth_layout_header" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center|center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:text="@string/welcome"
                    android:textColor="@color/green_700"
                    android:textSize="36sp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="48dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonRegister"
                    style="@style/LoginRegisterButton"
                    android:text="@string/register_button_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:text="@string/or"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonGoggleRegister"
                    style="@style/GoogleButton"
                    android:text="@string/register_google_button_text" />

                <TextView
                    android:id="@+id/privacyPolicyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/privacy_policy_text"
                    android:textAlignment="center"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="12dp"
                    android:text="@string/already_have_account"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonLogin"
                    style="@style/LoginRegisterButton"
                    app:backgroundTint="@color/green_500"
                    android:layout_marginBottom="24dp"
                    android:text="@string/login_button_text"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="ListedenAl App vBeta"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>